--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,8 @@ image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
 
 # UI configs
-title: "Shots by Pushpinder Pal Singh"
-subtitle: "A chapter from my life"
-author:  "Pushpinder Pal Singh"
 header:
- title: "Shots"
- subtitle: "by Pushpinder Pal Singh"
-footer:
- name: "Hello World! 👋'"
- bio: "I’m a software developer who writes. And 3D print. And photograph. Basically, following my curiosity and trying to find my purpose on this beautiful big blue ball. Learn more at: https://swiftlysingh.com"
+ title: "Germany"
 social_urls:
-  instagram: "https://www.instagram.com/pushpinderpalsingh_/"
-  twitter: "https://twitter.com/pushpinderpal_"
+  instagram: "https://www.instagram.com/analoguetigers"
+ 
